--- a/index.html
+++ b/index.html
@@ -231,5 +231,5 @@
   </template>
 
 </body>
-<script defer src="js/main.js"></script>
+<script type='module' defer src="js/main.js"></script>
 </html>
