--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="address">Адрес (координаты)</label>
-          <input id="address" name="address" type="text" value= '35.6819 139.7522', required readonly>
+          <input id="address" name="address" type="text" required readonly value="35.68197 139.75223">
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="type">Тип жилья</label>
